y.output
   0  $accept : programa $end

   1  programa : '{' sentencias '}'
   2           | sentencias '}'
   3           | '{' sentencias
   4           |

   5  sentencias : sentencia
   6             | sentencias sentencia

   7  sentencia : sentencia_declarativa
   8            | sentencia_ejecutable

   9  sentencia_ejecutable : sentencia_asignacion
  10                       | sentencia_invocacion_funcion
  11                       | sentencia_imprimir
  12                       | sentencia_seleccion
  13                       | sentencia_iterativa_do_while
  14                       | sentencia_return

  15  sentencias_funcion : sentencia_funcion
  16                     | sentencias_funcion sentencia_funcion

  17  sentencia_funcion : sentencia_declarativa
  18                    | sentencia_ejecutable_funcion

  19  sentencia_ejecutable_funcion : sentencia_asignacion
  20                               | sentencia_invocacion_funcion
  21                               | sentencia_imprimir
  22                               | sentencia_seleccion_funcion
  23                               | sentencia_iterativa_do_while_funcion

  24  sentencia_return : RETURN ','
  25                   | RETURN

  26  sentencia_iterativa_do_while : DO bloque_sentencias_ejecutables WHILE '(' condicion ')' ','
  27                               | DO bloque_sentencias_ejecutables WHILE '(' condicion ')'
  28                               | DO WHILE '(' condicion ')' ','
  29                               | DO bloque_sentencias_ejecutables WHILE '(' ')' ','
  30                               | DO bloque_sentencias_ejecutables '(' condicion ')' ','
  31                               | DO WHILE ','
  32                               | DO bloque_sentencias_ejecutables WHILE ','
  33                               | DO ','
  34                               | DO '(' condicion ')' ','
  35                               | DO '(' ')' ','
  36                               | DO '(' ')'

  37  sentencia_iterativa_do_while_funcion : DO bloque_sentencias_ejecutables_funcion WHILE '(' condicion ')' ','

  38  $$1 :

  39  sentencia_iterativa_do_while_funcion : DO bloque_sentencias_ejecutables_funcion WHILE '(' condicion ')' $$1 DO WHILE '(' condicion ')' ','
  40                                       | DO bloque_sentencias_ejecutables_funcion WHILE '(' ')' ','
  41                                       | DO bloque_sentencias_ejecutables_funcion '(' condicion ')' ','
  42                                       | DO WHILE ','
  43                                       | DO bloque_sentencias_ejecutables_funcion WHILE ','
  44                                       | DO ','
  45                                       | DO '(' condicion ')' ','
  46                                       | DO '(' ')' ','
  47                                       | DO '(' ')'

  48  sentencia_seleccion : IF '(' condicion ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ','
  49                      | IF '(' condicion ')' bloque_sentencias_ejecutables ENDIF ','
  50                      | IF '(' condicion ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF
  51                      | IF '(' condicion ')' bloque_sentencias_ejecutables ENDIF
  52                      | IF '(' ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ','
  53                      | IF '(' ')' bloque_sentencias_ejecutables ENDIF ','
  54                      | IF '(' condicion ')' ELSE bloque_sentencias_ejecutables ENDIF ','
  55                      | IF '(' condicion ')' bloque_sentencias_ejecutables ELSE ENDIF ','
  56                      | IF '(' condicion ')' ENDIF ','

  57  sentencia_seleccion_funcion : IF '(' condicion ')' bloque_sentencias_ejecutables_funcion ELSE bloque_sentencias_ejecutables_funcion ENDIF ','
  58                              | IF '(' condicion ')' bloque_sentencias_ejecutables_funcion ENDIF ','
  59                              | IF '(' condicion ')' bloque_sentencias_ejecutables_funcion ELSE bloque_sentencias_ejecutables_funcion ENDIF

  60  $$2 :

  61  sentencia_seleccion_funcion : IF '(' condicion ')' bloque_sentencias_ejecutables_funcion ENDIF $$2 IF '(' ')' bloque_sentencias_ejecutables_funcion ELSE bloque_sentencias_ejecutables_funcion ENDIF ','
  62                              | IF '(' ')' bloque_sentencias_ejecutables_funcion ENDIF ','
  63                              | IF '(' condicion ')' ELSE bloque_sentencias_ejecutables_funcion ENDIF ','
  64                              | IF '(' condicion ')' bloque_sentencias_ejecutables_funcion ELSE ENDIF ','
  65                              | IF '(' condicion ')' ENDIF ','

  66  bloque_sentencias_ejecutables : sentencia_ejecutable
  67                                | '{' sentencias_ejecutables '}'
  68                                | sentencia_declarativa

  69  bloque_sentencias_ejecutables_funcion : sentencia_ejecutable_funcion
  70                                        | sentencia_return
  71                                        | sentencia_declarativa
  72                                        | '{' sentencias_ejecutables_funcion '}'
  73                                        | '{' sentencias_ejecutables_funcion sentencia_return '}'
  74                                        | '{' sentencias_ejecutables_funcion sentencia_return sentencias_ejecutables_funcion_inalcanzable '}'
  75                                        | '{' '}'

  76  sentencias_ejecutables_funcion_inalcanzable : sentencia_ejecutable_funcion_inalcanzable
  77                                              | sentencias_ejecutables_funcion_inalcanzable sentencia_ejecutable_funcion_inalcanzable

  78  sentencia_ejecutable_funcion_inalcanzable : sentencia_return
  79                                            | sentencia_ejecutable_funcion

  80  sentencias_ejecutables : sentencia_ejecutable
  81                         | sentencias_ejecutables sentencia_ejecutable

  82  sentencias_ejecutables_funcion : sentencia_ejecutable_funcion
  83                                 | sentencias_ejecutables_funcion sentencia_ejecutable_funcion

  84  sentencia_imprimir : PRINT CADENA ','
  85                     | PRINT CADENA
  86                     | PRINT ','
  87                     | PRINT ID ','

  88  sentencia_invocacion_funcion : sentencia_objeto_identificador '(' expresion ')' ','
  89                               | sentencia_objeto_identificador '(' ')' ','
  90                               | sentencia_objeto_identificador '(' expresion ',' lista_expresiones_invocacion_funcion_exceso ')' ','
  91                               | sentencia_objeto_identificador '(' expresion ')'
  92                               | sentencia_objeto_identificador '(' ')'
  93                               | sentencia_objeto_identificador '(' expresion ',' lista_expresiones_invocacion_funcion_exceso ')'

  94  lista_expresiones_invocacion_funcion_exceso : expresion
  95                                              | expresion ',' expresion

  96  sentencia_asignacion : sentencia_objeto_identificador '=' expresion ','
  97                       | sentencia_objeto_identificador '=' expresion
  98                       | sentencia_objeto_identificador '=' ','

  99  sentencia_objeto_identificador : ID
 100                                 | sentencia_objeto_identificador '.' ID

 101  sentencia_declarativa : declaracion_variable
 102                        | declaracion_funcion
 103                        | declaracion_clase
 104                        | declaracion_interfaz

 105  declaracion_variable : tipo lista_de_variables ','
 106                       | tipo lista_de_variables
 107                       | tipo ','

 108  declaracion_interfaz : INTERFACE ID '{' bloque_encabezado_funcion '}'
 109                       | INTERFACE '{' bloque_encabezado_funcion '}'
 110                       | INTERFACE bloque_encabezado_funcion '}'
 111                       | INTERFACE '}'
 112                       | INTERFACE ID bloque_encabezado_funcion '}'
 113                       | INTERFACE ID '}'

 114  bloque_encabezado_funcion : encabezado_funcion ','
 115                            | bloque_encabezado_funcion ',' encabezado_funcion

 116  sentencia_declarativa_clase : tipo lista_de_variables ','
 117                              | tipo lista_de_variables
 118                              | declaracion_funcion
 119                              | ID ','

 120  declaracion_clase : CLASS ID '{' bloque_sentencias_declarativas_clase '}'
 121                    | CLASS ID IMPLEMENT ID '{' bloque_sentencias_declarativas_clase '}'
 122                    | CLASS '{' bloque_sentencias_declarativas_clase '}'
 123                    | CLASS IMPLEMENT ID
 124                    | CLASS ID IMPLEMENT '{' bloque_sentencias_declarativas_clase '}'
 125                    | CLASS IMPLEMENT '{' bloque_sentencias_declarativas_clase '}'
 126                    | CLASS ID bloque_sentencias_declarativas_clase '}'
 127                    | CLASS ID IMPLEMENT ID bloque_sentencias_declarativas_clase '}'

 128  bloque_sentencias_declarativas_clase : sentencia_declarativa_clase
 129                                       | bloque_sentencias_declarativas_clase sentencia_declarativa_clase

 130  declaracion_funcion : encabezado_funcion cuerpo_funcion

 131  encabezado_funcion : VOID ID '(' parametro_funcion ')'
 132                     | VOID ID '(' ')'
 133                     | VOID ID '(' parametro_funcion ',' lista_parametros_funcion_exceso ')'
 134                     | VOID ID '(' parametro_funcion lista_parametros_funcion_exceso ')'
 135                     | VOID '(' parametro_funcion ')'
 136                     | VOID '(' ')'
 137                     | VOID ID parametro_funcion ')'
 138                     | VOID ID ')'
 139                     | VOID ID

 140  cuerpo_funcion : '{' sentencias_funcion sentencia_return '}'
 141                 | '{' sentencia_return '}'
 142                 | '{' sentencias_funcion '}'
 143                 | '{' '}'
 144                 | '{' sentencias_funcion sentencia_return sentencias_funcion_inalcanzable '}'
 145                 | '{' sentencia_return sentencias_funcion_inalcanzable '}'

 146  sentencias_funcion_inalcanzable : sentencia_funcion_inalcanzable
 147                                  | sentencias_funcion_inalcanzable sentencia_funcion_inalcanzable

 148  sentencia_funcion_inalcanzable : sentencia_declarativa
 149                                 | sentencia_return
 150                                 | sentencia_ejecutable_funcion

 151  lista_parametros_funcion_exceso : parametro_funcion
 152                                  | lista_parametros_funcion_exceso ',' parametro_funcion
 153                                  | lista_parametros_funcion_exceso parametro_funcion

 154  parametro_funcion : tipo ID

 155  lista_de_variables : ID
 156                     | lista_de_variables ';' ID

 157  tipo : INT
 158       | ULONG
 159       | FLOAT
 160       | ID

 161  condicion : expresion comparador expresion
 162            | expresion comparador
 163            | comparador expresion

 164  comparador : COMP_MAYOR_IGUAL
 165             | COMP_MENOR_IGUAL
 166             | COMP_IGUAL
 167             | COMP_DISTINTO
 168             | '>'
 169             | '<'

 170  expresion : expresion '+' termino
 171            | expresion '-' termino
 172            | termino

 173  termino : termino '*' factor
 174          | termino '/' factor
 175          | factor

 176  factor : ID
 177         | ID OPERADOR_MENOS
 178         | constante

 179  constante : CTE
 180            | '-' CTE

state 0
	$accept : . programa $end  (0)
	programa : .  (4)

	ID  shift 1
	IF  shift 2
	PRINT  shift 3
	VOID  shift 4
	RETURN  shift 5
	CLASS  shift 6
	DO  shift 7
	INTERFACE  shift 8
	INT  shift 9
	ULONG  shift 10
	FLOAT  shift 11
	'{'  shift 12
	$end  reduce 4

	programa  goto 13
	sentencias  goto 14
	sentencia  goto 15
	sentencia_declarativa  goto 16
	sentencia_ejecutable  goto 17
	sentencia_asignacion  goto 18
	sentencia_invocacion_funcion  goto 19
	sentencia_imprimir  goto 20
	sentencia_seleccion  goto 21
	sentencia_iterativa_do_while  goto 22
	sentencia_return  goto 23
	sentencia_objeto_identificador  goto 24
	declaracion_variable  goto 25
	declaracion_funcion  goto 26
	declaracion_clase  goto 27
	declaracion_interfaz  goto 28
	tipo  goto 29
	encabezado_funcion  goto 30


state 1
	sentencia_objeto_identificador : ID .  (99)
	tipo : ID .  (160)

	ID  reduce 160
	','  reduce 160
	'('  reduce 99
	'='  reduce 99
	'.'  reduce 99


state 2
	sentencia_seleccion : IF . '(' condicion ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ','  (48)
	sentencia_seleccion : IF . '(' condicion ')' bloque_sentencias_ejecutables ENDIF ','  (49)
	sentencia_seleccion : IF . '(' condicion ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF  (50)
	sentencia_seleccion : IF . '(' condicion ')' bloque_sentencias_ejecutables ENDIF  (51)
	sentencia_seleccion : IF . '(' ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ','  (52)
	sentencia_seleccion : IF . '(' ')' bloque_sentencias_ejecutables ENDIF ','  (53)
	sentencia_seleccion : IF . '(' condicion ')' ELSE bloque_sentencias_ejecutables ENDIF ','  (54)
	sentencia_seleccion : IF . '(' condicion ')' bloque_sentencias_ejecutables ELSE ENDIF ','  (55)
	sentencia_seleccion : IF . '(' condicion ')' ENDIF ','  (56)

	'('  shift 31
	.  error


state 3
	sentencia_imprimir : PRINT . CADENA ','  (84)
	sentencia_imprimir : PRINT . CADENA  (85)
	sentencia_imprimir : PRINT . ','  (86)
	sentencia_imprimir : PRINT . ID ','  (87)

	ID  shift 32
	CADENA  shift 33
	','  shift 34
	.  error


state 4
	encabezado_funcion : VOID . ID '(' parametro_funcion ')'  (131)
	encabezado_funcion : VOID . ID '(' ')'  (132)
	encabezado_funcion : VOID . ID '(' parametro_funcion ',' lista_parametros_funcion_exceso ')'  (133)
	encabezado_funcion : VOID . ID '(' parametro_funcion lista_parametros_funcion_exceso ')'  (134)
	encabezado_funcion : VOID . '(' parametro_funcion ')'  (135)
	encabezado_funcion : VOID . '(' ')'  (136)
	encabezado_funcion : VOID . ID parametro_funcion ')'  (137)
	encabezado_funcion : VOID . ID ')'  (138)
	encabezado_funcion : VOID . ID  (139)

	ID  shift 35
	'('  shift 36
	.  error


state 5
	sentencia_return : RETURN . ','  (24)
	sentencia_return : RETURN .  (25)

	','  shift 37
	$end  reduce 25
	ID  reduce 25
	IF  reduce 25
	ELSE  reduce 25
	ENDIF  reduce 25
	PRINT  reduce 25
	VOID  reduce 25
	RETURN  reduce 25
	CLASS  reduce 25
	WHILE  reduce 25
	DO  reduce 25
	INTERFACE  reduce 25
	INT  reduce 25
	ULONG  reduce 25
	FLOAT  reduce 25
	'}'  reduce 25
	'('  reduce 25


state 6
	declaracion_clase : CLASS . ID '{' bloque_sentencias_declarativas_clase '}'  (120)
	declaracion_clase : CLASS . ID IMPLEMENT ID '{' bloque_sentencias_declarativas_clase '}'  (121)
	declaracion_clase : CLASS . '{' bloque_sentencias_declarativas_clase '}'  (122)
	declaracion_clase : CLASS . IMPLEMENT ID  (123)
	declaracion_clase : CLASS . ID IMPLEMENT '{' bloque_sentencias_declarativas_clase '}'  (124)
	declaracion_clase : CLASS . IMPLEMENT '{' bloque_sentencias_declarativas_clase '}'  (125)
	declaracion_clase : CLASS . ID bloque_sentencias_declarativas_clase '}'  (126)
	declaracion_clase : CLASS . ID IMPLEMENT ID bloque_sentencias_declarativas_clase '}'  (127)

	ID  shift 38
	IMPLEMENT  shift 39
	'{'  shift 40
	.  error


state 7
	sentencia_iterativa_do_while : DO . bloque_sentencias_ejecutables WHILE '(' condicion ')' ','  (26)
	sentencia_iterativa_do_while : DO . bloque_sentencias_ejecutables WHILE '(' condicion ')'  (27)
	sentencia_iterativa_do_while : DO . WHILE '(' condicion ')' ','  (28)
	sentencia_iterativa_do_while : DO . bloque_sentencias_ejecutables WHILE '(' ')' ','  (29)
	sentencia_iterativa_do_while : DO . bloque_sentencias_ejecutables '(' condicion ')' ','  (30)
	sentencia_iterativa_do_while : DO . WHILE ','  (31)
	sentencia_iterativa_do_while : DO . bloque_sentencias_ejecutables WHILE ','  (32)
	sentencia_iterativa_do_while : DO . ','  (33)
	sentencia_iterativa_do_while : DO . '(' condicion ')' ','  (34)
	sentencia_iterativa_do_while : DO . '(' ')' ','  (35)
	sentencia_iterativa_do_while : DO . '(' ')'  (36)

	ID  shift 1
	IF  shift 2
	PRINT  shift 3
	VOID  shift 4
	RETURN  shift 5
	CLASS  shift 6
	WHILE  shift 41
	DO  shift 7
	INTERFACE  shift 8
	INT  shift 9
	ULONG  shift 10
	FLOAT  shift 11
	'{'  shift 42
	','  shift 43
	'('  shift 44
	.  error

	sentencia_declarativa  goto 45
	sentencia_ejecutable  goto 46
	sentencia_asignacion  goto 18
	sentencia_invocacion_funcion  goto 19
	sentencia_imprimir  goto 20
	sentencia_seleccion  goto 21
	sentencia_iterativa_do_while  goto 22
	sentencia_return  goto 23
	bloque_sentencias_ejecutables  goto 47
	sentencia_objeto_identificador  goto 24
	declaracion_variable  goto 25
	declaracion_funcion  goto 26
	declaracion_clase  goto 27
	declaracion_interfaz  goto 28
	tipo  goto 29
	encabezado_funcion  goto 30


state 8
	declaracion_interfaz : INTERFACE . ID '{' bloque_encabezado_funcion '}'  (108)
	declaracion_interfaz : INTERFACE . '{' bloque_encabezado_funcion '}'  (109)
	declaracion_interfaz : INTERFACE . bloque_encabezado_funcion '}'  (110)
	declaracion_interfaz : INTERFACE . '}'  (111)
	declaracion_interfaz : INTERFACE . ID bloque_encabezado_funcion '}'  (112)
	declaracion_interfaz : INTERFACE . ID '}'  (113)

	ID  shift 48
	VOID  shift 4
	'{'  shift 49
	'}'  shift 50
	.  error

	bloque_encabezado_funcion  goto 51
	encabezado_funcion  goto 52


state 9
	tipo : INT .  (157)

	.  reduce 157


state 10
	tipo : ULONG .  (158)

	.  reduce 158


state 11
	tipo : FLOAT .  (159)

	.  reduce 159


state 12
	programa : '{' . sentencias '}'  (1)
	programa : '{' . sentencias  (3)

	ID  shift 1
	IF  shift 2
	PRINT  shift 3
	VOID  shift 4
	RETURN  shift 5
	CLASS  shift 6
	DO  shift 7
	INTERFACE  shift 8
	INT  shift 9
	ULONG  shift 10
	FLOAT  shift 11
	.  error

	sentencias  goto 53
	sentencia  goto 15
	sentencia_declarativa  goto 16
	sentencia_ejecutable  goto 17
	sentencia_asignacion  goto 18
	sentencia_invocacion_funcion  goto 19
	sentencia_imprimir  goto 20
	sentencia_seleccion  goto 21
	sentencia_iterativa_do_while  goto 22
	sentencia_return  goto 23
	sentencia_objeto_identificador  goto 24
	declaracion_variable  goto 25
	declaracion_funcion  goto 26
	declaracion_clase  goto 27
	declaracion_interfaz  goto 28
	tipo  goto 29
	encabezado_funcion  goto 30


state 13
	$accept : programa . $end  (0)

	$end  accept


state 14
	programa : sentencias . '}'  (2)
	sentencias : sentencias . sentencia  (6)

	ID  shift 1
	IF  shift 2
	PRINT  shift 3
	VOID  shift 4
	RETURN  shift 5
	CLASS  shift 6
	DO  shift 7
	INTERFACE  shift 8
	INT  shift 9
	ULONG  shift 10
	FLOAT  shift 11
	'}'  shift 54
	.  error

	sentencia  goto 55
	sentencia_declarativa  goto 16
	sentencia_ejecutable  goto 17
	sentencia_asignacion  goto 18
	sentencia_invocacion_funcion  goto 19
	sentencia_imprimir  goto 20
	sentencia_seleccion  goto 21
	sentencia_iterativa_do_while  goto 22
	sentencia_return  goto 23
	sentencia_objeto_identificador  goto 24
	declaracion_variable  goto 25
	declaracion_funcion  goto 26
	declaracion_clase  goto 27
	declaracion_interfaz  goto 28
	tipo  goto 29
	encabezado_funcion  goto 30


state 15
	sentencias : sentencia .  (5)

	.  reduce 5


state 16
	sentencia : sentencia_declarativa .  (7)

	.  reduce 7


state 17
	sentencia : sentencia_ejecutable .  (8)

	.  reduce 8


state 18
	sentencia_ejecutable : sentencia_asignacion .  (9)

	.  reduce 9


state 19
	sentencia_ejecutable : sentencia_invocacion_funcion .  (10)

	.  reduce 10


state 20
	sentencia_ejecutable : sentencia_imprimir .  (11)

	.  reduce 11


state 21
	sentencia_ejecutable : sentencia_seleccion .  (12)

	.  reduce 12


state 22
	sentencia_ejecutable : sentencia_iterativa_do_while .  (13)

	.  reduce 13


state 23
	sentencia_ejecutable : sentencia_return .  (14)

	.  reduce 14


state 24
	sentencia_invocacion_funcion : sentencia_objeto_identificador . '(' expresion ')' ','  (88)
	sentencia_invocacion_funcion : sentencia_objeto_identificador . '(' ')' ','  (89)
	sentencia_invocacion_funcion : sentencia_objeto_identificador . '(' expresion ',' lista_expresiones_invocacion_funcion_exceso ')' ','  (90)
	sentencia_invocacion_funcion : sentencia_objeto_identificador . '(' expresion ')'  (91)
	sentencia_invocacion_funcion : sentencia_objeto_identificador . '(' ')'  (92)
	sentencia_invocacion_funcion : sentencia_objeto_identificador . '(' expresion ',' lista_expresiones_invocacion_funcion_exceso ')'  (93)
	sentencia_asignacion : sentencia_objeto_identificador . '=' expresion ','  (96)
	sentencia_asignacion : sentencia_objeto_identificador . '=' expresion  (97)
	sentencia_asignacion : sentencia_objeto_identificador . '=' ','  (98)
	sentencia_objeto_identificador : sentencia_objeto_identificador . '.' ID  (100)

	'('  shift 56
	'='  shift 57
	'.'  shift 58
	.  error


state 25
	sentencia_declarativa : declaracion_variable .  (101)

	.  reduce 101


state 26
	sentencia_declarativa : declaracion_funcion .  (102)

	.  reduce 102


state 27
	sentencia_declarativa : declaracion_clase .  (103)

	.  reduce 103


state 28
	sentencia_declarativa : declaracion_interfaz .  (104)

	.  reduce 104


state 29
	declaracion_variable : tipo . lista_de_variables ','  (105)
	declaracion_variable : tipo . lista_de_variables  (106)
	declaracion_variable : tipo . ','  (107)

	ID  shift 59
	','  shift 60
	.  error

	lista_de_variables  goto 61


state 30
	declaracion_funcion : encabezado_funcion . cuerpo_funcion  (130)

	'{'  shift 62
	.  error

	cuerpo_funcion  goto 63


state 31
	sentencia_seleccion : IF '(' . condicion ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ','  (48)
	sentencia_seleccion : IF '(' . condicion ')' bloque_sentencias_ejecutables ENDIF ','  (49)
	sentencia_seleccion : IF '(' . condicion ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF  (50)
	sentencia_seleccion : IF '(' . condicion ')' bloque_sentencias_ejecutables ENDIF  (51)
	sentencia_seleccion : IF '(' . ')' bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables ENDIF ','  (52)
	sentencia_seleccion : IF '(' . ')' bloque_sentencias_ejecutables ENDIF ','  (53)
	sentencia_seleccion : IF '(' . condicion ')' ELSE bloque_sentencias_ejecutables ENDIF ','  (54)
	sentencia_seleccion : IF '(' . condicion ')' bloque_sentencias_ejecutables ELSE ENDIF ','  (55)
	sentencia_seleccion : IF '(' . condicion ')' ENDIF ','  (56)

	ID  shift 64
	CTE  shift 65
	COMP_MAYOR_IGUAL  shift 66
	COMP_MENOR_IGUAL  shift 67
	COMP_IGUAL  shift 68
	COMP_DISTINTO  shift 69
	'-'  shift 70
	')'  shift 71
	'>'  shift 72
	'<'  shift 73
	.  error

	condicion  goto 74
	expresion  goto 75
	comparador  goto 76
	termino  goto 77
	factor  goto 78
	constante  goto 79


state 32
	sentencia_imprimir : PRINT ID . ','  (87)

	','  shift 80
	.  error


state 33
	sentencia_imprimir : PRINT CADENA . ','  (84)
	sentencia_imprimir : PRINT CADENA .  (85)

	','  shift 81
	$end  reduce 85
	ID  reduce 85
	IF  reduce 85
	ELSE  reduce 85
	ENDIF  reduce 85
	PRINT  reduce 85
	VOID  reduce 85
	RETURN  reduce 85
	CLASS  reduce 85
	WHILE  reduce 85
	DO  reduce 85
	INTERFACE  reduce 85
	INT  reduce 85
	ULONG  reduce 85
	FLOAT  reduce 85
	'}'  reduce 85
	'('  reduce 85


state 34
	sentencia_imprimir : PRINT ',' .  (86)

	.  reduce 86


state 35
	encabezado_funcion : VOID ID . '(' parametro_funcion ')'  (131)
	encabezado_funcion : VOID ID . '(' ')'  (132)
	encabezado_funcion : VOID ID . '(' parametro_funcion ',' lista_parametros_funcion_exceso ')'  (133)
	encabezado_funcion : VOID ID . '(' parametro_funcion lista_parametros_funcion_exceso ')'  (134)
	encabezado_funcion : VOID ID . parametro_funcion ')'  (137)
	encabezado_funcion : VOID ID . ')'  (138)
	encabezado_funcion : VOID ID .  (139)

	ID  shift 82
	INT  shift 9
	ULONG  shift 10
	FLOAT  shift 11
	'('  shift 83
	')'  shift 84
	'{'  reduce 139
	'}'  reduce 139
	','  reduce 139

	tipo  goto 85
	parametro_funcion  goto 86


state 36
	encabezado_funcion : VOID '(' . parametro_funcion ')'  (135)
	encabezado_funcion : VOID '(' . ')'  (136)

	ID  shift 82
	INT  shift 9
	ULONG  shift 10
	FLOAT  shift 11
	')'  shift 87
	.  error

	tipo  goto 85
	parametro_funcion  goto 88


state 37
	sentencia_return : RETURN ',' .  (24)

	.  reduce 24


state 38
	declaracion_clase : CLASS ID . '{' bloque_sentencias_declarativas_clase '}'  (120)
	declaracion_clase : CLASS ID . IMPLEMENT ID '{' bloque_sentencias_declarativas_clase '}'  (121)
	declaracion_clase : CLASS ID . IMPLEMENT '{' bloque_sentencias_declarativas_clase '}'  (124)
	declaracion_clase : CLASS ID . bloque_sentencias_declarativas_clase '}'  (126)
	declaracion_clase : CLASS ID . IMPLEMENT ID bloque_sentencias_declarativas_clase '}'  (127)

	ID  shift 89
	VOID  shift 4
	IMPLEMENT  shift 90
	INT  shift 9
	ULONG  shift 10
	FLOAT  shift 11
	'{'  shift 91
	.  error

	declaracion_funcion  goto 92
	tipo  goto 93
	encabezado_funcion  goto 30
	sentencia_declarativa_clase  goto 94
	bloque_sentencias_declarativas_clase  goto 95


state 39
	declaracion_clase : CLASS IMPLEMENT . ID  (123)
	declaracion_clase : CLASS IMPLEMENT . '{' bloque_sentencias_declarativas_clase '}'  (125)

	ID  shift 96
	'{'  shift 97
	.  error


state 40
	declaracion_clase : CLASS '{' . bloque_sentencias_declarativas_clase '}'  (122)

	ID  shift 89
	VOID  shift 4
	INT  shift 9
	ULONG  shift 10
	FLOAT  shift 11
	.  error

	declaracion_funcion  goto 92
	tipo  goto 93
	encabezado_funcion  goto 30
	sentencia_declarativa_clase  goto 94
	bloque_sentencias_declarativas_clase  goto 98


state 41
	sentencia_iterativa_do_while : DO WHILE . '(' condicion ')' ','  (28)
	sentencia_iterativa_do_while : DO WHILE . ','  (31)

	','  shift 99
	'('  shift 100
	.  error


state 42
	bloque_sentencias_ejecutables : '{' . sentencias_ejecutables '}'  (67)

	ID  shift 101
	IF  shift 2
	PRINT  shift 3
	RETURN  shift 5
	DO  shift 7
	.  error

	sentencia_ejecutable  goto 102
	sentencia_asignacion  goto 18
	sentencia_invocacion_funcion  goto 19
	sentencia_imprimir  goto 20
	sentencia_seleccion  goto 21
	sentencia_iterativa_do_while  goto 22
	sentencia_return  goto 23
	sentencias_ejecutables  goto 103
	sentencia_objeto_identificador  goto 24


state 43
	sentencia_iterativa_do_while : DO ',' .  (33)

	.  reduce 33


state 44
	sentencia_iterativa_do_while : DO '(' . condicion ')' ','  (34)
	sentencia_iterativa_do_while : DO '(' . ')' ','  (35)
	sentencia_iterativa_do_while : DO '(' . ')'  (36)

	ID  shift 64
	CTE  shift 65
	COMP_MAYOR_IGUAL  shift 66
	COMP_MENOR_IGUAL  shift 67
	COMP_IGUAL  shift 68
	COMP_DISTINTO  shift 69
	'-'  shift 70
	')'  shift 104
	'>'  shift 72
	'<'  shift 73
	.  error

	condicion  goto 105
	expresion  goto 75
	comparador  goto 76
	termino  goto 77
	factor  goto 78
	constante  goto 79


state 45
	bloque_sentencias_ejecutables : sentencia_declarativa .  (68)

	.  reduce 68


state 46
	bloque_sentencias_ejecutables : sentencia_ejecutable .  (66)

	.  reduce 66


state 47
	sentencia_iterativa_do_while : DO bloque_sentencias_ejecutables . WHILE '(' condicion ')' ','  (26)
	sentencia_iterativa_do_while : DO bloque_sentencias_ejecutables . WHILE '(' condicion ')'  (27)
	sentencia_iterativa_do_while : DO bloque_sentencias_ejecutables . WHILE '(' ')' ','  (29)
	sentencia_iterativa_do_while : DO bloque_sentencias_ejecutables . '(' condicion ')' ','  (30)
	sentencia_iterativa_do_while : DO bloque_sentencias_ejecutables . WHILE ','  (32)

	WHILE  shift 106
	'('  shift 107
	.  error


state 48
	declaracion_interfaz : INTERFACE ID . '{' bloque_encabezado_funcion '}'  (108)
	declaracion_interfaz : INTERFACE ID . bloque_encabezado_funcion '}'  (112)
	declaracion_interfaz : INTERFACE ID . '}'  (113)

	VOID  shift 4
	'{'  shift 108
	'}'  shift 109
	.  error

	bloque_encabezado_funcion  goto 110
	encabezado_funcion  goto 52


state 49
	declaracion_interfaz : INTERFACE '{' . bloque_encabezado_funcion '}'  (109)

	VOID  shift 4
	.  error

	bloque_encabezado_funcion  goto 111
	encabezado_funcion  goto 52


state 50
	declaracion_interfaz : INTERFACE '}' .  (111)

	.  reduce 111


state 51
	declaracion_interfaz : INTERFACE bloque_encabezado_funcion . '}'  (110)
	bloque_encabezado_funcion : bloque_encabezado_funcion . ',' encabezado_funcion  (115)

	'}'  shift 112
	','  shift 113
	.  error


state 52
	bloque_encabezado_funcion : encabezado_funcion . ','  (114)

	','  shift 114
	.  error


state 53
	programa : '{' sentencias . '}'  (1)
	programa : '{' sentencias .  (3)
	sentencias : sentencias . sentencia  (6)

	ID  shift 1
	IF  shift 2
	PRINT  shift 3
	VOID  shift 4
	RETURN  shift 5
	CLASS  shift 6
	DO  shift 7
	INTERFACE  shift 8
	INT  shift 9
	ULONG  shift 10
	FLOAT  shift 11
	'}'  shift 115
	$end  reduce 3
